fix gap

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 .general {
   width: 100%;
-  gap: 15px;
+  gap: 10px 20px;
 }
 
 .general > h1,
